# cua-template

./: .dockerignore  .env.example  .gitignore  Dockerfile.hud  README.md  cli.py  dinit_guide.md  dinit_quick_reference.md  dinit_setup.py  entrypoint.sh  env.py  imagectl4.py  local_test.py  manual_dinit.py  pyproject.toml  step.py  tasks.py  test_runner.ipynb
dinit.d/: chromium  xvfb
dinit.d/boot.d/: chromium
grading/: __init__.py  graders.py  spec.py
tasks/: __init__.py  basic.py
tasks/create_document/: __init__.py  task.py
tasks/open_website/: __init__.py  task.py
tasks/search_wikipedia/: task.py
tests/: test_platform_compat.py
tools/: __init__.py  bash.py  computer.py  editor.py  run.py
utils/: extract_result_wger.py  generate_problems_json.py  open_problem_dev.py  trim_database.py
